# pastelpaste

./: Cargo.toml  README.md
src/: main.rs  models.rs  routes.rs  templates.rs
templates/: form.html  layout.html  paste.html
