
[package]
name = "pastelpaste"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
askama_axum = "0.4"
askama = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tower-http = { version = "0.5", features = ["fs"] }
markdown = "1"
anyhow = "1"
